# robocup-home_project

./: README.md
Robocup_home_project/: README.txt
Robocup_home_project/from2Dto3D/: CMakeLists.txt  package.xml
Robocup_home_project/from2Dto3D/include/from2Dto3D/: from2Dto3D.h
Robocup_home_project/from2Dto3D/launch/: segment.launch
Robocup_home_project/from2Dto3D/src/: from2Dto3D.cpp  node_2Dto3D.cpp
Robocup_home_project/grasp/: CMakeLists.txt  package.xml
Robocup_home_project/grasp/include/grasp/: grasp.h
Robocup_home_project/grasp/launch/: grasp.launch
Robocup_home_project/grasp/src/: grasp.cpp  grasp_class.cpp  tf2.cpp
Robocup_home_project/interaction/: CMakeLists.txt  package.xml
Robocup_home_project/interaction/launch/: interaction.launch
Robocup_home_project/interaction/script/: interact.py
Robocup_home_project/judge_position/: CMakeLists.txt  package.xml
Robocup_home_project/judge_position/launch/: detector.launch
Robocup_home_project/judge_position/src/: detector.py  models.py  move.py  train.py
Robocup_home_project/navigation_tiago/: CMakeLists.txt  package.xml
Robocup_home_project/navigation_tiago/include/navigation_tiago/: navigation_tiago.h
Robocup_home_project/navigation_tiago/launch/: navigation_tiago.launch
Robocup_home_project/navigation_tiago/msg/: arrived.msg
Robocup_home_project/navigation_tiago/simulation/config/: submap_0.pgm
Robocup_home_project/navigation_tiago/src/: ObjectRecognition.cpp  navigation_tiago_class.cpp  navigation_tiago_node.cpp
Robocup_home_project/openpose_ros/openpose_ros/launch/: openpose_ros.launch
Robocup_home_project/openpose_ros/openpose_ros/src/: openpose_flags.cpp
Robocup_home_project/perception_msgs/: CMakeLists.txt  package.xml
Robocup_home_project/perception_msgs/msg/: PointCloudArray.msg  Rect.msg
Robocup_home_project/wit_ros/: CMakeLists.txt
Robocup_home_project/wit_ros/src/wit_ros/: poseget.py  speak.py  wit_node.py
